kubernetes/apps/default/test-echo/app/httproute-external.yaml
---
# External HTTPRoute for ESPHome
# Protected by gateway-level Authentik forward-auth (default)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-echo-external
  namespace: default
spec:
  hostnames:
    - test-echo.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: test-echo
          port: 80
